--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "konva": "^9.3.20",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "path": "^0.12.7",
     "quill": "^2.0.3",
@@ -43,6 +44,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.0.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
