--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path": "^0.12.7",
     "quill": "^2.0.3",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
     "react-konva-utils": "^1.1.0",
