--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.31.8",
+    "@clerk/themes": "^2.4.4",
     "@liveblocks/client": "^2.24.3",
     "@liveblocks/react": "^2.24.3",
     "@radix-ui/react-checkbox": "^1.3.2",
